# ERPNEXTTheme

./: README.md  pyproject.toml  setup.py
erpnext_custom_theme/: build.json  hooks.py  package.json  patches.txt  webpack.config.js
erpnext_custom_theme/public/css/: desk_theme.css  theme.css  website_theme.css
erpnext_custom_theme/public/js/: theme.js
